--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,6 @@
-networkx
-simplejson
-requests
-pandas
-python-dateutil
-requests_oauthlib
-tqdm
-jsonasobj
-pyshex
-pyshexc
-sparql_slurper
-ShExJSG
-mwoauth
-oauthlib
+# requirements.txt
+ #
+ # installs dependencies from ./setup.py, and the package itself,
+ # in editable mode
+ # from: https://stackoverflow.com/questions/43658870/requirements-txt-vs-setup-py
+ -e .
